Add basic navbar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 
 	<body>
 
+		<ul class="navBar">
+			<li class="navItem">Skills</li>
+			<li class="navItem">Education</li>
+		</ul>
+
+
 		<!-- Title Section -->
 		<div class="title">
 			<h1>Ron Laniado</h1>
